# ilqr_solver

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
ALM_ilqr_v3/: ALM_Model_v2.py  README.md  __init__.py  alm_ilqr_core.py  alm_model.py  model_base.py  obstacle.py  planning_main.py  simulation_animation.py
include/: common_variable.hpp  config.hpp  control_constraint.hpp  cost_base.hpp  cost_calculator.hpp  ilqr_solver.hpp  kinematic_model.hpp  model_base.hpp  obstacle.hpp  state_constraint.hpp  state_cost.hpp
parking_environment/: HybridAstarpy.py  KinematicModel.py  TPCAP_Cases.py  main.py  map_test.py
parking_environment/PlanningRes/: LIOM_Case_100_Corridor.npy  LIOM_Case_100_Hybrid_A_star.npy  LIOM_Case_101_Corridor.npy  LIOM_Case_101_Hybrid_A_star.npy  LIOM_Case_102_Corridor.npy  LIOM_Case_102_Hybrid_A_star.npy  LIOM_Case_103_Corridor.npy  LIOM_Case_103_Hybrid_A_star.npy  LIOM_Case_104_Corridor.npy  LIOM_Case_104_Hybrid_A_star.npy  LIOM_Case_105_Corridor.npy  LIOM_Case_105_Hybrid_A_star.npy  LIOM_Case_106_Corridor.npy  LIOM_Case_106_Hybrid_A_star.npy  LIOM_Case_107_Corridor.npy  LIOM_Case_107_Hybrid_A_star.npy  LIOM_Case_108_Corridor.npy  LIOM_Case_108_Hybrid_A_star.npy  LIOM_Case_109_Corridor.npy  LIOM_Case_109_Hybrid_A_star.npy  LIOM_Case_10_Corridor.npy  LIOM_Case_10_Hybrid_A_star.npy  LIOM_Case_111_Corridor.npy  (+242 more)
scripts/: ControlConstraint.py  CostCalculator.py  ILQR_Core.py  StateConstraint.py  cost_base.py  kinematic_mode.py  model_base.py  state_cost.py  test.py  test_control_constraint.py  test_cost_calculator.py  test_ilqr_comprehensive.py  test_obstacle_comprehensive.py  test_state_constraint.py  test_state_constraint_comprehensive.py
scripts_new/: ILQR_Core.py  Initializer.py  KinematicModel.py  ModelBase.py  Model_Parking.py  Model_new.py  obstacle.py  planning_main.py
src/: CMakeLists.txt  ilqr_demo.cpp
tests/: CMakeLists.txt  get_exact_control_constraint_values.py  get_exact_cost_calculator_values.py  get_exact_ilqr_solver_values.py  get_exact_ilqr_values.py  get_exact_kinematic_values.py  get_exact_obstacle_values.py  get_exact_state_constraint_values.py  get_exact_state_cost_values.py  test_control_constraint_verification.cpp  test_cost_calculator_verification.cpp  test_ilqr_solver_verification.cpp  test_kinematic_model_verification.cpp  test_obstacle_verification.cpp  test_state_constraint_verification.cpp  test_state_cost_verification.cpp
